[UPDATE] Packages,files and code from Henry master class